# mapepire-rs

./: .gitattributes  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  audit.toml  clippy.toml  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: audit-cron.yml  ci.yml  sbom.yml
src/: config.rs  error.rs  job.rs  job_helpers.rs  lib.rs  password.rs  query.rs
src/protocol/: codec.rs  mod.rs  request.rs  response.rs
src/transport/: dispatcher.rs  handshake.rs  mod.rs  socket.rs  tls.rs
tests/: auth_failure.rs  cancellation.rs  concurrency.rs  drop_rows.rs  half_open.rs  handshake.rs  integration_smoke.rs  paging.rs  prepared.rs  proptest_round_trips.rs  server_errors.rs  sql.rs  tls_bootstrap.rs  wire_snapshots.rs
tests/common/: mock_server.rs  mod.rs
tests/snapshots/: wire_snapshots__dove.snap  wire_snapshots__exit.snap  wire_snapshots__exited.snap  wire_snapshots__getdbjob.snap  wire_snapshots__gettracedata.snap  wire_snapshots__getversion.snap  wire_snapshots__ping.snap  wire_snapshots__pong.snap  wire_snapshots__setconfig.snap  wire_snapshots__snapshot_request_cl.snap  wire_snapshots__snapshot_request_connect.snap  wire_snapshots__snapshot_request_execute.snap  wire_snapshots__snapshot_request_prepare_sql.snap  wire_snapshots__snapshot_request_prepare_sql_execute_batched.snap  wire_snapshots__snapshot_request_sql_minimal.snap  wire_snapshots__snapshot_request_sql_with_params_and_rows.snap  wire_snapshots__snapshot_response_cl_result.snap  wire_snapshots__snapshot_response_config_set.snap  wire_snapshots__snapshot_response_connected.snap  wire_snapshots__snapshot_response_db_job.snap  wire_snapshots__snapshot_response_dove_result.snap  wire_snapshots__snapshot_response_error.snap  wire_snapshots__snapshot_response_prepared_statement.snap  wire_snapshots__snapshot_response_query_result_dml.snap  wire_snapshots__snapshot_response_query_result_select.snap  wire_snapshots__snapshot_response_sql_closed.snap  wire_snapshots__snapshot_response_trace_data.snap  wire_snapshots__snapshot_response_version.snap  wire_snapshots__sqlclose.snap  wire_snapshots__sqlmore.snap
