[package]
name = "mapepire"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Async Rust client for Mapepire — Db2 for IBM i over secure WebSockets"
repository = "https://github.com/MeridianGroupInt/mapepire-rs"
documentation = "https://docs.rs/mapepire"
readme = "README.md"
keywords = ["ibm-i", "db2", "mapepire", "database", "websocket"]
categories = ["database", "asynchronous"]

[features]
default = ["rustls-tls"]
rustls-tls = []
native-tls = []
insecure-tls = []
serde-config = ["dep:base64"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml"] }
proptest = "1"
pretty_assertions = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "deny"
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
