[package]
name = "mapepire"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Async Rust client for Mapepire — Db2 for IBM i over secure WebSockets"
repository = "https://github.com/MeridianGroupInt/mapepire-rs"
documentation = "https://docs.rs/mapepire"
readme = "README.md"
keywords = ["ibm-i", "db2", "mapepire", "database", "websocket"]
categories = ["database", "asynchronous"]

# Whitelist what ships in the published package. Cargo always includes
# Cargo.toml, Cargo.lock, .cargo_vcs_info.json, and Cargo.toml.orig
# regardless of this list. Everything else (tests/, .github/, contributor
# docs, dev tooling, snap fixtures, etc.) stays in the repo for
# contributors and gets dropped from the crates.io tarball.
include = [
    "src/**/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
default = ["rustls-tls"]
rustls-tls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pki-types",
    "dep:webpki-roots",
    "tokio-tungstenite/rustls-tls-webpki-roots",
]
native-tls = [
    "dep:native-tls",
    "dep:tokio-native-tls",
    "tokio-tungstenite/native-tls",
]
insecure-tls = []
serde-config = ["dep:base64"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
base64 = { version = "0.22", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
futures = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1"
bytes = "1"
# Optional TLS stacks — pulled by their respective feature flags above.
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml"] }
proptest = "1"
pretty_assertions = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
# Mock TLS+WebSocket server harness (Task 21 / PRO-417).
# rcgen mints self-signed certs at test time; tokio-rustls drives the
# server-side TLS acceptor. Both are dev-only — they never ship in the
# published crate. tokio-rustls version is pinned to match the regular dep
# exactly so cargo-deny's multiple-versions = "deny" stays clean.
rcgen = "0.14"
tokio-rustls = { version = "0.26", default-features = false }
# Enable rustls' ring provider so the process-level CryptoProvider is
# populated when running tests. rcgen pulls ring into the dep tree, but
# rustls only auto-selects a provider when exactly one of its own
# `ring`/`aws_lc_rs` features is active. This dev-dep activates `ring`
# on the same rustls version, resolving the ambiguity at test time only.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "deny"
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
